--- a/style.css
+++ b/style.css
@@ -1053,6 +1053,7 @@ section{
       background-color: var(--white);
       transition: .2s linear;
       clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+      z-index: 1;
    }
 
    .header .flex .navbar a{
